--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #000; /* black background */
+      background-color: #000;
       color: #ffffff;
       display: flex;
       justify-content: center;
@@ -132,7 +132,7 @@
   </div>
 
   <script>
-    const contractAddress = "YOUR_CONTRACT_ADDRESS_HERE"; // Replace with your actual address
+    const contractAddress = "YOUR_CONTRACT_ADDRESS_HERE"; // Replace with deployed contract address
 
     const abi = [
       {
@@ -173,16 +173,19 @@
     let provider, signer, contract;
 
     async function connect() {
+      console.log("🔄 Attempting to connect to MetaMask...");
       if (typeof window.ethereum !== 'undefined') {
         try {
           await window.ethereum.request({ method: 'eth_requestAccounts' });
           provider = new ethers.BrowserProvider(window.ethereum);
           signer = await provider.getSigner();
+          const address = await signer.getAddress();
+          console.log("🟢 Connected wallet:", address);
           contract = new ethers.Contract(contractAddress, abi, signer);
+          console.log("📄 Contract initialized:", contract);
           document.getElementById("walletStatus").innerText = "🟢 Connected to MetaMask";
         } catch (err) {
-          console.error("Connection error:", err);
-          alert("❌ Connection failed. See console.");
+          console.error("❌ Connection error:", err);
           document.getElementById("walletStatus").innerText = "🔴 Connection failed.";
         }
       } else {
@@ -201,9 +204,9 @@
       try {
         const tx = await contract.registerLand(id, location, area);
         await tx.wait();
-        document.getElementById("output").innerText = ✅ Land Registered!\nTx Hash: ${tx.hash};
+        document.getElementById("output").innerText = `✅ Land Registered!\nTx Hash: ${tx.hash}`;
       } catch (err) {
-        document.getElementById("output").innerText = ❌ Error: ${err.message};
+        document.getElementById("output").innerText = `❌ Error: ${err.message}`;
       }
     }
 
@@ -214,9 +217,9 @@
       try {
         const tx = await contract.transferLand(id, newOwner);
         await tx.wait();
-        document.getElementById("output").innerText = ✅ Land Transferred!\nTx Hash: ${tx.hash};
+        document.getElementById("output").innerText = `✅ Land Transferred!\nTx Hash: ${tx.hash}`;
       } catch (err) {
-        document.getElementById("output").innerText = ❌ Error: ${err.message};
+        document.getElementById("output").innerText = `❌ Error: ${err.message}`;
       }
     }
 
@@ -233,7 +236,7 @@
 • Owner: ${land[3]}
         `;
       } catch (err) {
-        document.getElementById("output").innerText = ❌ Error: ${err.message};
+        document.getElementById("output").innerText = `❌ Error: ${err.message}`;
       }
     }
   </script>
