--- a/index.html
+++ b/index.html
@@ -1,244 +1,147 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Land Registry System</title>
-  <script src="https://cdn.jsdelivr.net/npm/ethers@6.6.2/dist/ethers.umd.min.js"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #000;
-      color: #ffffff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
+<script>
+  const contractAddress = "0x7b4a134387ff518cb14f520b3b8d7e7d38685e83";
+
+  const abi = [
+    {
+      "anonymous": false,
+      "inputs": [
+        { "indexed": true, "internalType": "uint256", "name": "id", "type": "uint256" },
+        { "indexed": true, "internalType": "address", "name": "owner", "type": "address" },
+        { "indexed": false, "internalType": "string", "name": "location", "type": "string" },
+        { "indexed": false, "internalType": "uint256", "name": "area", "type": "uint256" }
+      ],
+      "name": "LandRegistered",
+      "type": "event"
+    },
+    {
+      "anonymous": false,
+      "inputs": [
+        { "indexed": true, "internalType": "uint256", "name": "id", "type": "uint256" },
+        { "indexed": true, "internalType": "address", "name": "oldOwner", "type": "address" },
+        { "indexed": true, "internalType": "address", "name": "newOwner", "type": "address" }
+      ],
+      "name": "LandTransferred",
+      "type": "event"
+    },
+    {
+      "inputs": [
+        { "internalType": "uint256", "name": "_id", "type": "uint256" },
+        { "internalType": "string", "name": "_location", "type": "string" },
+        { "internalType": "uint256", "name": "_area", "type": "uint256" }
+      ],
+      "name": "registerLand",
+      "outputs": [],
+      "stateMutability": "nonpayable",
+      "type": "function"
+    },
+    {
+      "inputs": [
+        { "internalType": "uint256", "name": "_id", "type": "uint256" },
+        { "internalType": "address", "name": "_newOwner", "type": "address" }
+      ],
+      "name": "transferLand",
+      "outputs": [],
+      "stateMutability": "nonpayable",
+      "type": "function"
+    },
+    {
+      "inputs": [
+        { "internalType": "uint256", "name": "_id", "type": "uint256" }
+      ],
+      "name": "getLand",
+      "outputs": [
+        { "internalType": "uint256", "name": "", "type": "uint256" },
+        { "internalType": "string", "name": "", "type": "string" },
+        { "internalType": "uint256", "name": "", "type": "uint256" },
+        { "internalType": "address", "name": "", "type": "address" }
+      ],
+      "stateMutability": "view",
+      "type": "function"
+    },
+    {
+      "inputs": [
+        { "internalType": "uint256", "name": "", "type": "uint256" }
+      ],
+      "name": "lands",
+      "outputs": [
+        { "internalType": "uint256", "name": "id", "type": "uint256" },
+        { "internalType": "string", "name": "location", "type": "string" },
+        { "internalType": "uint256", "name": "area", "type": "uint256" },
+        { "internalType": "address", "name": "owner", "type": "address" },
+        { "internalType": "bool", "name": "exists", "type": "bool" }
+      ],
+      "stateMutability": "view",
+      "type": "function"
     }
+  ];
 
-    .container {
-      background: #0a0a23;
-      padding: 2rem;
-      border-radius: 20px;
-      max-width: 700px;
-      width: 100%;
-      box-shadow: 0 10px 30px rgba(0, 100, 255, 0.4);
-      border: 1px solid rgba(0, 100, 255, 0.3);
-    }
+  let provider, signer, contract;
 
-    h1 {
-      text-align: center;
-      color: #4facfe;
-      font-size: 2.4rem;
-      margin-bottom: 1.5rem;
-    }
-
-    h3 {
-      color: #ffffff;
-      font-size: 1.2rem;
-      margin-top: 1.5rem;
-      margin-bottom: 0.5rem;
-      border-left: 4px solid #4facfe;
-      padding-left: 10px;
-    }
-
-    input {
-      background: #111;
-      border: 2px solid #4facfe;
-      border-radius: 10px;
-      padding: 12px;
-      font-size: 1rem;
-      margin: 0.4rem 0;
-      color: #fff;
-      width: 100%;
-    }
-
-    input:focus {
-      outline: none;
-      border-color: #00d4ff;
-      box-shadow: 0 0 8px rgba(0, 212, 255, 0.3);
-    }
-
-    button {
-      background: linear-gradient(to right, #0052D4, #4364F7);
-      border: none;
-      color: white;
-      padding: 12px;
-      margin-top: 0.8rem;
-      border-radius: 10px;
-      font-size: 1rem;
-      font-weight: bold;
-      cursor: pointer;
-      width: 100%;
-      transition: 0.3s ease-in-out;
-    }
-
-    button:hover {
-      background: linear-gradient(to right, #003c9e, #2840b0);
-      box-shadow: 0 0 12px rgba(0, 100, 255, 0.4);
-    }
-
-    .output {
-      background: #111;
-      border-left: 4px solid #4facfe;
-      padding: 1rem;
-      margin-top: 1.5rem;
-      border-radius: 10px;
-      font-family: monospace;
-      color: #d1eaff;
-      white-space: pre-wrap;
-    }
-
-    #walletStatus {
-      text-align: center;
-      font-weight: bold;
-      margin-bottom: 10px;
-      color: #00ffae;
-    }
-
-    .section {
-      margin-bottom: 2rem;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>🌐 Land Registry System</h1>
-    <div id="walletStatus">🔌 Connecting to MetaMask...</div>
-
-    <div class="section">
-      <h3>Register New Land</h3>
-      <input id="regId" placeholder="Land ID" type="number" />
-      <input id="regLocation" placeholder="Location (e.g. City, State)" />
-      <input id="regArea" placeholder="Area in sq ft" type="number" />
-      <button onclick="registerLand()">Register Land</button>
-    </div>
-
-    <div class="section">
-      <h3>Transfer Ownership</h3>
-      <input id="transId" placeholder="Land ID to Transfer" type="number" />
-      <input id="newOwner" placeholder="New Owner's Wallet Address" />
-      <button onclick="transferLand()">Transfer Land</button>
-    </div>
-
-    <div class="section">
-      <h3>Get Land Information</h3>
-      <input id="getId" placeholder="Enter Land ID" type="number" />
-      <button onclick="getLand()">Fetch Land Info</button>
-    </div>
-
-    <div class="output" id="output">📄 Output will appear here...</div>
-  </div>
-
-  <script>
-    const contractAddress = "YOUR_CONTRACT_ADDRESS_HERE"; // Replace with deployed contract address
-
-    const abi = [
-      {
-        "inputs": [
-          { "internalType": "uint256", "name": "_id", "type": "uint256" },
-          { "internalType": "string", "name": "_location", "type": "string" },
-          { "internalType": "uint256", "name": "_area", "type": "uint256" }
-        ],
-        "name": "registerLand",
-        "outputs": [],
-        "stateMutability": "nonpayable",
-        "type": "function"
-      },
-      {
-        "inputs": [
-          { "internalType": "uint256", "name": "_id", "type": "uint256" },
-          { "internalType": "address", "name": "_newOwner", "type": "address" }
-        ],
-        "name": "transferLand",
-        "outputs": [],
-        "stateMutability": "nonpayable",
-        "type": "function"
-      },
-      {
-        "inputs": [{ "internalType": "uint256", "name": "_id", "type": "uint256" }],
-        "name": "getLand",
-        "outputs": [
-          { "internalType": "uint256", "name": "", "type": "uint256" },
-          { "internalType": "string", "name": "", "type": "string" },
-          { "internalType": "uint256", "name": "", "type": "uint256" },
-          { "internalType": "address", "name": "", "type": "address" }
-        ],
-        "stateMutability": "view",
-        "type": "function"
-      }
-    ];
-
-    let provider, signer, contract;
-
-    async function connect() {
-      console.log("🔄 Attempting to connect to MetaMask...");
-      if (typeof window.ethereum !== 'undefined') {
-        try {
-          await window.ethereum.request({ method: 'eth_requestAccounts' });
-          provider = new ethers.BrowserProvider(window.ethereum);
-          signer = await provider.getSigner();
-          const address = await signer.getAddress();
-          console.log("🟢 Connected wallet:", address);
-          contract = new ethers.Contract(contractAddress, abi, signer);
-          console.log("📄 Contract initialized:", contract);
-          document.getElementById("walletStatus").innerText = "🟢 Connected to MetaMask";
-        } catch (err) {
-          console.error("❌ Connection error:", err);
-          document.getElementById("walletStatus").innerText = "🔴 Connection failed.";
-        }
-      } else {
-        alert("❌ MetaMask is not installed.");
-        document.getElementById("walletStatus").innerText = "🔴 MetaMask not found.";
-      }
-    }
-
-    connect();
-
-    async function registerLand() {
-      const id = document.getElementById("regId").value;
-      const location = document.getElementById("regLocation").value;
-      const area = document.getElementById("regArea").value;
-
+  async function connect() {
+    console.log("🔄 Attempting to connect to MetaMask...");
+    if (typeof window.ethereum !== 'undefined') {
       try {
-        const tx = await contract.registerLand(id, location, area);
-        await tx.wait();
-        document.getElementById("output").innerText = `✅ Land Registered!\nTx Hash: ${tx.hash}`;
+        await window.ethereum.request({ method: 'eth_requestAccounts' });
+        provider = new ethers.BrowserProvider(window.ethereum);
+        signer = await provider.getSigner();
+        const address = await signer.getAddress();
+        console.log("🟢 Connected wallet:", address);
+        contract = new ethers.Contract(contractAddress, abi, signer);
+        console.log("📄 Contract initialized:", contract);
+        document.getElementById("walletStatus").innerText = "🟢 Connected to MetaMask";
       } catch (err) {
-        document.getElementById("output").innerText = `❌ Error: ${err.message}`;
+        console.error("❌ Connection error:", err);
+        document.getElementById("walletStatus").innerText = "🔴 Connection failed.";
       }
+    } else {
+      alert("❌ MetaMask is not installed.");
+      document.getElementById("walletStatus").innerText = "🔴 MetaMask not found.";
     }
+  }
 
-    async function transferLand() {
-      const id = document.getElementById("transId").value;
-      const newOwner = document.getElementById("newOwner").value;
+  connect();
 
-      try {
-        const tx = await contract.transferLand(id, newOwner);
-        await tx.wait();
-        document.getElementById("output").innerText = `✅ Land Transferred!\nTx Hash: ${tx.hash}`;
-      } catch (err) {
-        document.getElementById("output").innerText = `❌ Error: ${err.message}`;
-      }
+  async function registerLand() {
+    const id = document.getElementById("regId").value;
+    const location = document.getElementById("regLocation").value;
+    const area = document.getElementById("regArea").value;
+
+    try {
+      const tx = await contract.registerLand(id, location, area);
+      await tx.wait();
+      document.getElementById("output").innerText = `✅ Land Registered!\nTx Hash: ${tx.hash}`;
+    } catch (err) {
+      document.getElementById("output").innerText = `❌ Error: ${err.message}`;
     }
+  }
 
-    async function getLand() {
-      const id = document.getElementById("getId").value;
+  async function transferLand() {
+    const id = document.getElementById("transId").value;
+    const newOwner = document.getElementById("newOwner").value;
 
-      try {
-        const land = await contract.getLand(id);
-        document.getElementById("output").innerText = `
+    try {
+      const tx = await contract.transferLand(id, newOwner);
+      await tx.wait();
+      document.getElementById("output").innerText = `✅ Land Transferred!\nTx Hash: ${tx.hash}`;
+    } catch (err) {
+      document.getElementById("output").innerText = `❌ Error: ${err.message}`;
+    }
+  }
+
+  async function getLand() {
+    const id = document.getElementById("getId").value;
+
+    try {
+      const land = await contract.getLand(id);
+      document.getElementById("output").innerText = `
 🌍 Land Info:
 • ID: ${land[0]}
 • Location: ${land[1]}
 • Area: ${land[2]} sq ft
 • Owner: ${land[3]}
-        `;
-      } catch (err) {
-        document.getElementById("output").innerText = `❌ Error: ${err.message}`;
-      }
+      `;
+    } catch (err) {
+      document.getElementById("output").innerText = `❌ Error: ${err.message}`;
     }
-  </script>
-</body>
-</html>
+  }
+</script>
