--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       align-items: center;
       min-height: 100vh;
     }
-
     .container {
       background: #0a0a23;
       padding: 2rem;
@@ -26,14 +25,12 @@
       box-shadow: 0 10px 30px rgba(0, 100, 255, 0.4);
       border: 1px solid rgba(0, 100, 255, 0.3);
     }
-
     h1 {
       text-align: center;
       color: #4facfe;
       font-size: 2.4rem;
       margin-bottom: 1.5rem;
     }
-
     h3 {
       color: #ffffff;
       font-size: 1.2rem;
@@ -42,7 +39,6 @@
       border-left: 4px solid #4facfe;
       padding-left: 10px;
     }
-
     input {
       background: #111;
       border: 2px solid #4facfe;
@@ -53,13 +49,11 @@
       color: #fff;
       width: 100%;
     }
-
     input:focus {
       outline: none;
       border-color: #00d4ff;
       box-shadow: 0 0 8px rgba(0, 212, 255, 0.3);
     }
-
     button {
       background: linear-gradient(to right, #0052D4, #4364F7);
       border: none;
@@ -73,12 +67,10 @@
       width: 100%;
       transition: 0.3s ease-in-out;
     }
-
     button:hover {
       background: linear-gradient(to right, #003c9e, #2840b0);
       box-shadow: 0 0 12px rgba(0, 100, 255, 0.4);
     }
-
     .output {
       background: #111;
       border-left: 4px solid #4facfe;
@@ -89,14 +81,12 @@
       color: #d1eaff;
       white-space: pre-wrap;
     }
-
     #walletStatus {
       text-align: center;
       font-weight: bold;
       margin-bottom: 10px;
       color: #00ffae;
     }
-
     .section {
       margin-bottom: 2rem;
     }
@@ -190,21 +180,6 @@
         ],
         "stateMutability": "view",
         "type": "function"
-      },
-      {
-        "inputs": [
-          { "internalType": "uint256", "name": "", "type": "uint256" }
-        ],
-        "name": "lands",
-        "outputs": [
-          { "internalType": "uint256", "name": "id", "type": "uint256" },
-          { "internalType": "string", "name": "location", "type": "string" },
-          { "internalType": "uint256", "name": "area", "type": "uint256" },
-          { "internalType": "address", "name": "owner", "type": "address" },
-          { "internalType": "bool", "name": "exists", "type": "bool" }
-        ],
-        "stateMutability": "view",
-        "type": "function"
       }
     ];
 
@@ -259,16 +234,20 @@
 
     async function getLand() {
       const id = document.getElementById("getId").value;
+      const costPerSqFt = 500;
 
       try {
         const land = await contract.getLand(id);
-        document.getElementById("output").innerText = `
-🌍 Land Info:
-• ID: ${land[0]}
-• Location: ${land[1]}
-• Area: ${land[2]} sq ft
-• Owner: ${land[3]}
-        `;
+        const totalCost = land[2] * costPerSqFt;
+
+        document.getElementById("output").innerText =
+          `🌍 Land Info:\n` +
+          `• ID: ${land[0]}\n` +
+          `• Location: ${land[1]}\n` +
+          `• Area: ${land[2]} sq ft\n` +
+          `• Owner: ${land[3]}\n` +
+          `• Cost per sq ft: ₹${costPerSqFt}\n` +
+          `• Total Estimated Cost: ₹${totalCost}`;
       } catch (err) {
         document.getElementById("output").innerText = `❌ Error: ${err.message}`;
       }
